@@ -8,6 +8,8 @@
 * Added routines for converting music time signature to frequency/period.
 * Implemented series of normalized LFO functions.
 * Implemented dspu::RingBuffer class for processing the circular ring buffers.
+* Added possibility to pass callback function do dspu::Oversamples as an alternative
+  to the interface pointer.
 * Updated build scripts.
 
 === 1.0.11 ===
